Change APY to be luvi based
